--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
-project( testingDnn )
+project( basicOpenCVFunc )
 find_package( OpenCV REQUIRED )
 
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
-add_executable( testingDnn main.cpp )
-target_link_libraries( testingDnn ${OpenCV_LIBS} )
+add_executable( basicOpenCVFunc main.cpp )
+target_link_libraries( basicOpenCVFunc ${OpenCV_LIBS} )
