Adding CMake support in Wrapper Class and loading it in main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project( basicOpenCVFunc )
-find_package( OpenCV REQUIRED )
 
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+add_subdirectory(darknetUtility)
 
 add_executable( basicOpenCVFunc main.cpp )
-target_link_libraries( basicOpenCVFunc ${OpenCV_LIBS} )
+target_link_libraries( basicOpenCVFunc darknetUtility)
